agent-core/parity/tests/snapshots/schema_snapshots__system_notification_block.snap
---
source: parity/tests/schema_snapshots.rs
expression: value
---
{
  "description": "Engine-generated reminder for the model wrapped in tags.\n\nThis is a first-class content block — distinct from a user-authored\nTextBlock — so the engine and UI can treat it\nspecially:\n\n- The display layer can render it differently (greyed-out, icon,\n  collapsible) instead of mixing it with real user text.\n- Provider-history preparation can filter or dedupe stale notifications before\n  they reach the model.\n- Audit / persistence can count notifications separately from real user\n  messages.\n\nOn the wire (Anthropic and other providers that only accept ``text``\nblocks mid-conversation), this block is serialized as a ``text`` block\nwhose body is wrapped in ``<system-reminder>...</system-reminder>``\ntags. See :func:`serialize_content_block`. The role of the parent\n:class:`Message` should be ``\"user\"`` because Anthropic's\nAPI does not accept arbitrary roles in the messages array.",
  "properties": {
    "text": {
      "title": "Text",
      "type": "string"
    },
    "type": {
      "const": "system_notification",
      "default": "system_notification",
      "title": "Type",
      "type": "string"
    }
  },
  "required": [
    "text"
  ],
  "title": "SystemNotificationBlock",
  "type": "object"
}
