agent-core/parity/tests/snapshots/schema_snapshots__text_tool_output.snap
---
source: parity/tests/schema_snapshots.rs
expression: value
---
{
  "description": "Successful output for tools whose true output is plain text.",
  "title": "TextToolOutput",
  "type": "string"
}
