agent-core/parity/tests/snapshots/schema_snapshots__thinking_block.snap
---
source: parity/tests/schema_snapshots.rs
expression: value
---
{
  "description": "Model reasoning / chain-of-thought content.",
  "properties": {
    "text": {
      "title": "Text",
      "type": "string"
    },
    "type": {
      "const": "thinking",
      "default": "thinking",
      "title": "Type",
      "type": "string"
    }
  },
  "required": [
    "text"
  ],
  "title": "ThinkingBlock",
  "type": "object"
}
